--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-beautifulsoup4
+beautifulsoup4~=4.10.0
 requests_html
-requests
+requests~=2.26.0
 html5lib
-mongita
+mongita~=1.1.1
 jinja2
+PyYAML~=6.0
+DateTime~=4.3
+bs4~=0.0.1
