--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ searches:
     sites:
       - site_name: "immobiliare"
         query_urls:
-          - "https://www.immobiliare.it/search-list/?vrt=41.924393%2C12.541108%3B41.922525%2C12.540679%3B41.917383%2C12.543168%3B41.921327%2C12.546773%3B41.924951%2C12.546108%3B41.925766%2C12.545292%3B41.926133%2C12.543082%3B41.924393%2C12.541108&idContratto=1&idCategoria=1&prezzoMassimo=300000&superficieMinima=80&fasciaPiano[0]=20&criterio=rilevanza&ordine=desc&__lang=it&pag=1&slau=1"
+          - "https://www.immobiliare.it/vendita-case/roma/pietralata/con-piani-intermedi/?criterio=rilevanza&prezzoMassimo=300000&superficieMinima=80"
       - site_name: "idealista"
         query_urls:
           - "https://www.idealista.it/aree/vendita-case/con-prezzo_280000,dimensione_80,piani-intermedi/?shape=%28%28yu%7B%7EFmookAyAs%5EkCsg%40%60%7C%40aVdD%7Er%40yDn%5Cgt%40xL%29%29"
@@ -33,6 +33,17 @@ searches:
       - site_name: "idealista"
         query_urls:
           - "https://www.idealista.it/vendita-case/ciampino-roma/con-prezzo_280000,dimensione_80,piani-intermedi/"
+  - title: "bracciano e anguillaria"
+    description: ""
+    sites:
+      - site_name: "immobiliare"
+        query_urls:
+          - "https://www.immobiliare.it/vendita-case/anguillara-sabazia/con-piani-intermedi/?criterio=rilevanza&prezzoMassimo=250000&superficieMinima=80"
+          - "https://www.immobiliare.it/vendita-case/bracciano/con-piani-intermedi/?criterio=rilevanza&prezzoMassimo=250000&superficieMinima=80"
+      - site_name: "idealista"
+        query_urls:
+          - "https://www.idealista.it/vendita-case/bracciano-roma/con-prezzo_250000,dimensione_80/"
+          - "https://www.idealista.it/vendita-case/anguillara-sabazia-roma/con-prezzo_240000,dimensione_80/"
 
 
 
