--- a/config_dev.yml
+++ b/config_dev.yml
@@ -9,7 +9,7 @@ email:
     domain_name: "smtp.gmail.com"
     port: 465
 db:
-  connection_string: "mongodb+srv://buyhomealarm_app_pi:z3jFXk69sdD8AZf@cluster0.48mwk.mongodb.net/buyhomealarm_db?retryWrites=true&w=majority"
+  connection_string: "mongodb+srv://buyhomealarm_app_pi_dev:AcCyAZyX6H9H3EJ@cluster0.oh329.mongodb.net/buyhomealarm_db?retryWrites=true&w=majority"
 supported_sites_conf :
   - site_name: "immobiliare"
     base_url: ""
