--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,6 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,python
 /._db/
+
+# python pi execution
+nohup.out
