--- a/config_dev.yml
+++ b/config_dev.yml
@@ -18,3 +18,6 @@ supported_sites_conf :
     base_url: "https://www.idealista.it"
   - site_name: "casa_it"
     base_url: "https://www.casa.it"
+telegram:
+  bot:
+    api_token: "419140869:AAHJcjXX8GOYaqVROa9Zp0uwlfU4VoR5jM4"
