--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ jinja2
 PyYAML~=6.0
 DateTime~=4.3
 bs4~=0.0.1
-apscheduler~=2.0.1
+apscheduler~=3.2
 pymongo[srv]~=3.12.3
-python-telegram-bot~=12.8
+python-telegram-bot~=20.0a1
